Finish cleaning up